--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,30 +1,27 @@
 version: 0.2
 
 phases:
- install:
-  commands:
-  #install node 12
-  - echo Installing Node 12...
-  - curl -sL https://deb.nodesource.com/setup_12.x | bash -
-  - apt install -y nodejs
-  # install Yarn
-  - echo Installing Yarn..
-  - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
-  - echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
-  - apt update && sudo apt install --no-install-recommends yarn
+  install:
+    commands:
+      - echo Installing Node 12...
+      - curl -sL https://deb.nodesource.com/setup_12.x | bash -
+      - apt install -y nodejs
+      - echo Installing Yarn...
+      - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
+      - echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
+      - apt install --no-install-recommends yarn
   pre_build:
-   commands:
-   # install dependencies
-   - echo Installing dependencies..
-   - yarn
+    commands:
+      - echo Installing dependencies...
+      - yarn
   build:
-   commands:
-   # tests
-   # build
-   - echo Testing...
-   - yarn test
-   - echo Building....
-   - yarn build
-
-    
-   
+    commands:
+      - echo Testing...
+      - yarn test
+      - echo Building...
+      - yarn build
+artifacts:
+  files:
+    - "**/*"
+  discard-paths: no
+  base-directory: dist
